# dav1d-fpga

./: .clang-format  .gitignore  README.md  arm32_cross.txt  meson.build  meson_options.txt  test.sh
include/dav1d/: dav1d.h
package/crossfiles/: arm-linux-de1soc.meson
scripts/: block.txt  data.csv  dct_diff.c  meson.build  plot_frequencies.py  pull_and_decode_yt.sh  show_block.py
src/: itx_1d.c  itx_1d.h  itx_tmpl.c  lib.c  meson.build
src/fpga/: fpga_iface.c  fpga_iface.h  itx.h
tools/: dav1d.c
verilog/: .rules.verible_lint  Computer_System.qsys  Computer_System.sopcinfo  DE1_SoC_Computer.cdf  DE1_SoC_Computer.done  DE1_SoC_Computer.fit.summary  DE1_SoC_Computer.jdi  DE1_SoC_Computer.map.smsg  DE1_SoC_Computer.map.summary  DE1_SoC_Computer.merge.summary  DE1_SoC_Computer.pin  DE1_SoC_Computer.qarlog  DE1_SoC_Computer.qsf  DE1_SoC_Computer.sld  DE1_SoC_Computer.sta.summary  DE1_SoC_Computer.sv  hps_sdram_p0_summary.csv  single_block.vcd
verilog/Computer_System/: Computer_System.xml  Computer_System_bb.v  Computer_System_inst.v  Computer_System_inst.vhd
verilog/db/: .cmp.kpt  DE1_SoC_Computer.cmp.rdb  DE1_SoC_Computer.db_info  DE1_SoC_Computer.restore.qmsg  DE1_SoC_Computer_partition_pins.json  prev_cmp_DE1_SoC_Computer.qmsg
verilog/modules/: .gitignore  M10K_16_1024.sv  arr_reader.sv  arr_writer.sv  av1_decode.sv  av1_helper_functions.sv  b_transform.sv  fair_rw_lock_mgr.sv  identity_32.sv  inv_dct_32.sv  naive_inv_dct_32.sv  row_reader.sv  row_writer.sv  single_block_32.sv
verilog/obj_dir/: Vsingle_block_bench  Vsingle_block_bench.cpp  (+43 more)
(+58 files in other folders)
